--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <body>
     <header>
         <h1>ALOYSIUS JOHN E. VILLACANAS</h1>
-        <p>Web Developer & Designer</p>
+        <p>Electronics Engineer</p>
     </header>
 
     <nav>
